--- a/style.css
+++ b/style.css
@@ -1,33 +1,83 @@
-.form-container {
+.container {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* flex-wrap: wrap; */
+}
+.form-container {
+  width: 17%;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* align-items: flex-start; */
+  /* justify-content: center; */
+  padding: 10px;
+  border: 1px solid black;
+  margin-left: 5px;
 }
 
-.form-container label {
-  display: inline-block;
-  height: fit-content;
-}
-
-.canvas-container {
+.form-container p{
+  padding:10px;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: rgb(209, 209, 209);
+  /* text-align: center; */
   width: fit-content;
+  margin: 5% auto ;
+  border: 1px solid black;
+}
+
+.form-container .input-container {
+  border: 1px solid black;
+  background-color: rgb(209, 209, 209);
+  border-radius: 5px;
+  margin: 2px 0;
+  padding: 10px;
+}
+.form-container .main-label {
+  display: inline-block;
+  /* height: fit-content; */
+}
+.form-container input{
+  margin-right: auto;
+}
+
+.form-container .main-label {
+  display: block;
+}
+.form-container .submit-btn {
+  margin: 5px 25%;
+  padding: 10px;
+  font-size: 15px;
+  font-weight: bold;
+  text-align:  center;
+  /* transform: translateX(50%); */
+}
+.canvas-container {
+  width: 80%;
   position: relative;
 }
 #myCanvas {
-  /* aspect-ratio: 6144 / 5016; */
   border: solid 1px #f550d4;  
   width: 100%; 
-  height: 100%;
+  /* height: ; */
   object-fit: contain; 
   overflow: scroll; 
-  aspect-ratio: 16 / 7;
+  /* aspect-ratio: 16 / 9; */
 }
 
 #myDialog {
   width: 200px;
-  /* position: absolute; */
-  /* left: 50%; */
-  /* top: 50%; */
-  /* transform: translate(-50%, -50%); */
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    display: block;
+  }
+  .canvas-container {
+    width: 100%;
+  }
+  .form-container {
+    width: calc(100% - 20px);
+    margin: 0;
+  }
 }
